--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,7 +1,6 @@
-<p>recipe-detail works!</p>
 <div class="row">
   <div class="col-xs-12">
-    <img src="" alt="" />
+    <img src="" alt="" class="img-responsive" />
   </div>
 </div>
 <div class="row">
@@ -24,12 +23,8 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-12">
-    Description
-  </div>
+  <div class="col-xs-12">Description</div>
 </div>
 <div class="row">
-  <div class="col-xs-12">
-    Ingredients
-  </div>
+  <div class="col-xs-12">Ingredients</div>
 </div>
